[gd_scene load_steps=9 format=2]

[ext_resource path="res://recursos/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://recursos/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://recursos/Fonts/Kenney Future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://juego/test/GuardarCargartestt.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 1 )

[node name="GuardarCargarTest" type="Node"]
script = ExtResource( 4 )

[node name="BotonGuardar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.0
margin_top = 23.0
margin_right = -58.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "guardar"

[node name="BotonCargar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.0
margin_top = 89.0
margin_right = -58.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 1 )
text = "cargar"

[node name="BotonEliminar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.0
margin_top = 155.0
margin_right = -38.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "Eliminar"

[node name="BotonGuardarGodot" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = 25.0
margin_right = 178.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "guardar  GD"

[node name="BotonCargarGodot" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = 91.0
margin_right = 181.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 1 )
text = "cargar     GD"

[node name="BotonEliminarGodot" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = 155.0
margin_right = 181.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "Eliminar  GD"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = -205.0
margin_right = 229.0
margin_bottom = -176.0
custom_fonts/font = SubResource( 2 )
text = "Hola Mundo, Mi nombre es"

[node name="TextoResultadojSON" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 53.0
margin_top = -139.0
margin_right = 194.0
margin_bottom = -113.0
custom_fonts/font = SubResource( 3 )
text = "resultado"

[node name="TextoResultadoTRES" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 53.0
margin_top = -69.0
margin_right = 194.0
margin_bottom = -43.0
custom_fonts/font = SubResource( 4 )
text = "resultado"

[node name="NombrejSON" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -146.0
margin_right = 43.0
margin_bottom = -101.0
align = 1

[node name="NombreTRES" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -78.0
margin_right = 43.0
margin_bottom = -33.0
align = 1

[connection signal="pressed" from="BotonGuardar" to="." method="_on_BotonGuardar_pressed"]
[connection signal="pressed" from="BotonCargar" to="." method="_on_BotonCargar_pressed"]
[connection signal="pressed" from="BotonEliminar" to="." method="_on_BotonEliminar_pressed"]
[connection signal="pressed" from="BotonGuardarGodot" to="." method="_on_BotonGuardarGodot_pressed"]
[connection signal="pressed" from="BotonCargarGodot" to="." method="_on_BotonCargarGodot_pressed"]
[connection signal="pressed" from="BotonEliminarGodot" to="." method="_on_BotonEliminarGodot_pressed"]
